--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple Discord bot framework",
   "main": "build/client.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "repository": "git@github.com:Wumpus-Friends/Buddy.ts.git",
   "author": "Nolway <faizeau.alexis@gmail.com>",
@@ -12,10 +14,16 @@
   "dependencies": {
     "discord.js": "^13.1.0",
     "discordx": "^6.0.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
     "typescript": "^4.4.3"
   }
 }
